--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,16 +11,20 @@
     <header>
       <div class="menu">
           <% if (username) { %>
+            <ul>
             <li><a href="/">Home</a></li>
             <li><a href="addtasks">Add Tasks</a></li>
             <li><a href="viewtasks">View Tasks</a></li>
             <li><a href="focus">Focus</a></li>
             <li><a href="notes">Quick Notes</a></li>
             <li><a href="logout">Logout</a></li>
+            </ul>
           <% } else { %>
+            <ul>
             <li><a href="/">Home</a></li>
             <li><a href="register">Register</a></li>
             <li><a href="login">Login</a></li>
+            </ul>
             <% } %>
       </div>
     </header>
@@ -34,6 +38,11 @@
     <div class="quote-container">
       <h2>Daily Stoic Quote</h2>
       <p id="stoicQuote">Loading quote...</p>
+      <br>
+  </div>
+
+  <div class="index-content">
+    <p>Welcome to Scholar Flow! <br> <br>The aim of Scholar Flow is to help you stay on track of school and the day to day tasks that you have.</p>
   </div>
 
 
