added ending for a div

--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -17,6 +17,7 @@
           <li><a href="notes">Quick Notes</a></li>
           <li><a href="logout">Logout</a></li>
         </ul>
+        </div>
   </header>
     <h1>Quick Notes</h1>
 
