--- a/views/addtasks.ejs
+++ b/views/addtasks.ejs
@@ -10,12 +10,13 @@
     <header>
       <div class="menu">
         <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="addtasks">Add Tasks</a></li>
-        <li><a href="viewtasks">View Tasks</a></li>
-        <li><a href="focus">Focus</a></li>
-        <li><a href="notes">Quick Notes</a></li>
-        <li><a href="logout">Logout</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="addtasks">Add Tasks</a></li>
+          <li><a href="viewtasks">View Tasks</a></li>
+          <li><a href="focus">Focus</a></li>
+          <li><a href="notes">Quick Notes</a></li>
+          <li><a href="logout">Logout</a></li>
       </ul>
       </div>
     </header>
