--- a/views/viewtasks.ejs
+++ b/views/viewtasks.ejs
@@ -11,6 +11,7 @@
       <nav class="menu">
         <ul>
           <li><a href="/">Home</a></li>
+          <li><a href="about">About</a></li>
           <li><a href="addtasks">Add Tasks</a></li>
           <li><a href="viewtasks">View Tasks</a></li>
           <li><a href="focus">Focus</a></li>
