--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,12 +12,13 @@
       <div class="menu">
           <% if (username) { %>
             <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="addtasks">Add Tasks</a></li>
-            <li><a href="viewtasks">View Tasks</a></li>
-            <li><a href="focus">Focus</a></li>
-            <li><a href="notes">Quick Notes</a></li>
-            <li><a href="logout">Logout</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="addtasks">Add Tasks</a></li>
+                <li><a href="viewtasks">View Tasks</a></li>
+                <li><a href="focus">Focus</a></li>
+                <li><a href="notes">Quick Notes</a></li>
+                <li><a href="logout">Logout</a></li>
             </ul>
           <% } else { %>
             <ul>
